--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
 
         <div class="text-center">
             <img src="./img/LuminaForge3.png" class="img-fluid p-3" alt="ImagemLogo">
-            <p class="fs-2 bg-dark-subtle text-dark-emphasis">
+            <div class="fs-2 text-white " style="background-color:#6f42c1">
                 Na LuminaForge, transformamos linhas de código em emoções, criando jogos que tocam o coração e desafiam
                 a mente.
                 <br>
                 Descubra o poder dos sentimentos em cada pixel.
-            </p>
+            </div>
         </div>
 
 
     </header>
 
-    <section class="container-fluid p-4">
+    <section class="container-fluid p-4" style="background-color:#e2d9f3;">
         <h2>Portfólio de Jogos</h2>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4 ">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
 
             <div class="col">
                 <div class="card h-100">
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <section class="container-fluid p-4 text-light fs-5" style="background-color: #433460;">
+    <section class="container-fluid p-4 text-light fs-5" style="background-color: #6f42c1;">
         <h2>Sobre a Desenvolvedora</h2>
         <p>
             A LuminaForge nasceu da paixão compartilhada por criar experiências de jogo que transcendem a imaginação.
@@ -115,7 +115,7 @@
 
     </section>
 
-    <section class="container-fluid p-4 fs-5">
+    <section class="container-fluid p-4 fs-5" style="background-color: #e2d9f3;">
         <h2>Notícias</h2>
 
         <p>
